Dark Mode Fix Heading

--- a/css/get-involved_change.css
+++ b/css/get-involved_change.css
@@ -230,8 +230,9 @@ input:checked ~ .tab-content {
   }
 }
 @media (prefers-color-scheme: dark) {
-  .headinglink h2 {
-    color: white;
+  .headinglink{
+    color: white !important;
+
   }
 }
 .tab-content.contribute button {
